setup.cfg now reads version from module

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = mixmod
-version = 0.0.1
+version = attr: mixmod.__version__
 author = Marc Singleton
 author_email = marcsingleton@berkeley.edu
 description = Fit continuous mixture models with arbitrary components to data
