--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,10 @@ classifiers =
 package_dir =
     = src
 packages = find:
-python_requires = >=3.6
+python_requires = >=3.8
+install_requires =
+	numpy >= 1.17
+	scipy >= 1.8
 
 [options.packages.find]
 where = src
