Updated README.md and setup.cfg description to reflect impending addition of discrete fitting methods

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = mixmod
 version = attr: mixmod.__version__
 author = Marc Singleton
 author_email = marcsingleton@berkeley.edu
-description = Fit continuous mixture models with arbitrary components to data
+description = An implementation of mixture models with robust fitting methods for a fixed set of components
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/marcsingleton/mixmod
